--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <strong>Róbert Csordás*</strong>,
             <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
             <br>
-              <em>arXiv preprint, 2022</em> 
+              <em>International Conference on Machine Learning (ICML), 2022</em> 
             <br>
             <a href="https://arxiv.org/pdf/2202.05798.pdf">pdf</a> /
             <a href="https://github.com/robertcsordas/linear_layer_as_attention">code</a> /
