Stanford NLP seminar

--- a/index.html
+++ b/index.html
@@ -351,6 +351,9 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Talks</heading>
                 <ul>
+                  <li> In June 2022 I gave a <a href="https://docs.google.com/presentation/d/1mVM6p-48yrES696YiCgouQeJxAli3ZATsisFSXknMD0/edit?usp=sharing">talk</a> on the <a href="https://nlp.stanford.edu/seminar/">Stanford NLP Seminar</a> on how ideas from compositionality improve systematic generalization.</li>
+                </ul>
+                <ul>
                   <li> In April 2022 I gave a <a href="https://docs.google.com/presentation/d/1Y5vP0ONiQX_xtOrLo4f1rZpm_ysAVKhpupcYv_CwrpA/edit?usp=sharing">talk</a> for <a href="https://www.mit.edu/~jda/">Jacob Andreas</a>' <a href="https://lingo.csail.mit.edu/people.html">group</a> on how ideas from compositionality improve systematic generalization.</li>
                 </ul>
                 <ul>
