--- a/index.html
+++ b/index.html
@@ -354,6 +354,9 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Talks</heading>
                 <ul>
+                  <li> In June 2022 I gave a <a href="https://docs.google.com/presentation/d/1eXwP3vqfZIsvd31aqciJfaav96CIMi9o_z6_vud6j98/edit?usp=sharing">talk</a> on the Neural Sequence Models Theory group on how ideas from compositionality improve systematic generalization.</li>
+                </ul>
+                <ul>
                   <li> In June 2022 I gave a <a href="https://docs.google.com/presentation/d/1mVM6p-48yrES696YiCgouQeJxAli3ZATsisFSXknMD0/edit?usp=sharing">talk</a> on the <a href="https://nlp.stanford.edu/seminar/">Stanford NLP Seminar</a> on how ideas from compositionality improve systematic generalization.</li>
                 </ul>
                 <ul>
