--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             </p>
             <p>
               I am a PhD candidate at the <a href="http://www.idsia.ch/">Swiss AI lab IDSIA</a>, working with
-              Prof. <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>. I work on systematic 
+              Prof. <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>. I'm currently doing my 
+              internship at DeepMind. I work on systematic 
               generalization, mainly in the context of algorithmic reasoning. This drives my research interest 
               in network architectures (Transformers, DNC, graph networks) with inductive biases like information 
               routing (attention, memory) and learning modular structures. My goal is to create a system that
