--- a/index.html
+++ b/index.html
@@ -69,6 +69,70 @@
         
       <!-- List of publications -->
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <!-- CTL++ -->
+        <tr>
+          <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/ctlpp.svg" width="160">
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="https://arxiv.org/abs/2210.06350">
+              <papertitle>CTL++: Evaluating Generalization on Never-Seen Compositional Patterns of Known Functions, and Compatibility of Neural Representations</papertitle>
+            </a>
+            <br>
+            <strong>Róbert Csordás</strong>,
+            <a href="http://people.idsia.ch/~kazuki/">Kazuki Irie</a>,
+            <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
+            <br>
+              <em>Empirical Methods in Natural Language Processing (EMNLP), 2022 </em>
+            <br>
+            <a href="https://arxiv.org/pdf/2210.06350.pdf">pdf</a> /
+            <a href="https://github.com/robertcsordas/ctlpp">code</a> /
+            <a href="data/ctlpp.bib">bib</a>
+            <br>
+            <p>
+              We developed a new dataset for testing systematicity based on CTL by partitioning the data based on functional groups. Using this, we were able to show that Transformers naturally learn multiple, incompatible representations of the same symbol. As a result, the network fails when the symbol is fed to a function that has not seen that specific representation before.
+            </p>
+          </td>
+        </tr> 
+         
+        <!-- A Generalist Neural Algorithmic Learner -->
+         <tr>
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <div class="one">
+                <img src="images/clrs.svg" width="160">
+            </div>
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="https://arxiv.org/abs/2209.11142">
+              <papertitle>A Generalist Neural Algorithmic Learner</papertitle>
+            </a>
+            <br>
+            Borja Ibarz,
+            <a href="https://yobibyte.github.io/">Vitaly Kurin</a>,
+            George Papamakarios,
+            Kyriacos Nikiforou,
+            Mehdi Bennani,
+            <strong>Róbert Csordás</strong>,
+            Andrew Dudzik,
+            <a href="https://matko.info/">Matko Bošnjak</a>,
+            Alex Vitvitskyi,
+            <a href="http://www.cs.toronto.edu/~rubanova/">Yulia Rubanova</a>,
+            <a href="https://andreeadeac22.github.io/">Andreea Deac</a>,
+            <a href="https://beabevi.github.io/">Beatrice Bevilacqua</a>,
+            <a href="http://yaroslav.ganin.net/">Yaroslav Ganin</a>,
+            <a href="https://www.gatsby.ucl.ac.uk/~ucgtcbl/">Charles Blundell</a>,
+            <a href="https://petar-v.com/">Petar Veličković</a>
+            <br>
+              <em>arXiv preprint: 2209.11142</em> 
+            <br>
+            <a href="https://arxiv.org/pdf/2209.11142.pdf">pdf</a> /
+            <a href="https://github.com/deepmind/clrs">code</a> /
+            <a href="data/generalist_clrs.bib">bib</a>
+            <p>
+              We train multi-task generalist reasoning architecture on the CLRS algorithmic reasoning benchmark that shares a single, universal processor among all tasks. Furthermore, we introduce numerous improvements to the previous best architecture, achieving new SOTA even in the single-task case.
+            </p>
+          </td>
+         </tr> 
          <!-- The Dual Form of Neural Networks Revisited -->
          <tr>
           <td style="padding:20px;width:25%;vertical-align:middle">
@@ -275,6 +339,7 @@
           </td>
         </tr>
       </tbody></table>
+
 
       <!-- Workshop papers title -->
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
