--- a/index.html
+++ b/index.html
@@ -420,6 +420,9 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Talks</heading>
                 <ul>
+                  <li> In November 2022 I gave a <a href="https://docs.google.com/presentation/d/1LU7qT2uNGsGRww50iZkiT-3Yb8NNjQ0_3rlND1kQM8U/edit?usp=sharing">talk</a> at <a href="https://rycolab.io/">Rycolab</a> at <a href="https://ethz.ch">ETH Zürich</a> on the Neural Sequence Models Theory group on how ideas from compositionality improve systematic generalization.</li>
+                </ul>
+                <ul>
                   <li> In June 2022 I gave a <a href="https://docs.google.com/presentation/d/1eXwP3vqfZIsvd31aqciJfaav96CIMi9o_z6_vud6j98/edit?usp=sharing">talk</a> on the Neural Sequence Models Theory group on how ideas from compositionality improve systematic generalization.</li>
                 </ul>
                 <ul>
