--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
             <br>
             Borja Ibarz,
             <a href="https://yobibyte.github.io/">Vitaly Kurin</a>,
-            George Papamakarios,
-            Kyriacos Nikiforou,
-            Mehdi Bennani,
+            <a href="https://twitter.com/gpapamak">George Papamakarios</a>,
+            <a href="https://twitter.com/k_nikiforou">Kyriacos Nikiforou</a>,
+            <a href="https://twitter.com/MehdiBennaniML">Mehdi Bennani</a>,
             <strong>Róbert Csordás</strong>,
-            Andrew Dudzik,
+            <a href="https://twitter.com/andrewdudzik">Andrew Dudzik</a>,
             <a href="https://matko.info/">Matko Bošnjak</a>,
             Alex Vitvitskyi,
             <a href="http://www.cs.toronto.edu/~rubanova/">Yulia Rubanova</a>,
@@ -123,7 +123,7 @@
             <a href="https://www.gatsby.ucl.ac.uk/~ucgtcbl/">Charles Blundell</a>,
             <a href="https://petar-v.com/">Petar Veličković</a>
             <br>
-              <em>arXiv preprint: 2209.11142</em> 
+              <em>Learning on Graphs (LoG), 2022</em> 
             <br>
             <a href="https://arxiv.org/pdf/2209.11142.pdf">pdf</a> /
             <a href="https://github.com/deepmind/clrs">code</a> /
