--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
             </p>
             <p>
               I am a PhD candidate at the <a href="http://www.idsia.ch/">Swiss AI lab IDSIA</a>, working with
-              Prof. <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>. I'm currently doing my 
-              internship at DeepMind. I work on systematic 
+              Prof. <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>. I work on systematic 
               generalization, mainly in the context of algorithmic reasoning. This drives my research interest 
               in network architectures (Transformers, DNC, graph networks) with inductive biases like information 
               routing (attention, memory) and learning modular structures. My goal is to create a system that
@@ -41,6 +40,9 @@
               structure. I consider the lack of systematic generation to be the main obstacle to a more generally
               applicable artificial intelligence.
           </p>
+            <p>
+              During the summer of 2022, I did an internship at <a href="https://deepmind.com">DeepMind</a>.
+            </p>
             <p>
               Before starting my PhD, I received a master's degree from <a href="https://www.bme.hu/">Budapest University of Technology and Economics</a> and worked as a research scientist at <a href="https://aimotive.com/">AImotive</a> on developing self driving cars.
             </p>
