--- a/index.html
+++ b/index.html
@@ -71,6 +71,33 @@
         
       <!-- List of publications -->
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <!-- Topological Neural Discrete Representation Learning à la Kohonen -->
+        <tr>
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <div class="one">
+                <img src="images/kohonen.jpg" width="160", style="padding-top: 7mm;">
+            </div>
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="https://arxiv.org/abs/2302.07950">
+              <papertitle>Topological Neural Discrete Representation Learning à la Kohonen</papertitle>
+            </a>
+            <br>
+            <a href="http://people.idsia.ch/~kazuki/">Kazuki Irie*</a>,
+            <strong>Róbert Csordás*</strong>,
+            <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
+            <br>
+              <em>arXiv:2302.07950</em> 
+            <br>
+            <a href="https://arxiv.org/pdf/2302.07950.pdf">pdf</a> /
+            <a href="https://github.com/IDSIA/kohonen-vae">code</a> /
+            <a href="data/kohonen.bib">bib</a>
+            <p>
+              We show that vector quantization is a special case of self-organizing maps (SOMs). Using the SOM formulation proposed by Kohonen in his 1982 paper improves converge speed, makes the training more robust, and results in a topologically organized representation space.
+            </p>
+          </td>
+        </tr> 
+
         <!-- CTL++ -->
         <tr>
           <td style="padding:20px;width:25%;vertical-align:middle">
@@ -89,6 +116,7 @@
             <br>
             <a href="https://arxiv.org/pdf/2210.06350.pdf">pdf</a> /
             <a href="https://github.com/robertcsordas/ctlpp">code</a> /
+            <a href="data/ctlpp_poster.pdf">poster</a> /
             <a href="data/ctlpp.bib">bib</a>
             <br>
             <p>
