Randomized pos encoding paper

--- a/index.html
+++ b/index.html
@@ -98,6 +98,38 @@
           </td>
         </tr> 
 
+        <!-- Randomized Pos Enc -->
+
+        <tr>
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <div class="one">
+                <img src="images/randpos.png" width="160", style="padding-top: 7mm;">
+            </div>
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="https://openreview.net/forum?id=nMYj4argap">
+              <papertitle>Randomized Positional Encodings Boost Length Generalization of Transformers</papertitle>
+            </a>
+            <br>
+            <a href="https://twitter.com/anianruoss">Anian Ruoss</a>,
+            <a href="https://twitter.com/gregdeletang">Gregoire Deletang</a>,
+            <a href="http://tim.inversetemperature.net/"">Tim Genewein</a>,
+            <a href="https://sites.google.com/view/graumoya/home">Jordi Grau-Moya</a>, 
+            <strong>Róbert Csordás</strong>,
+            <a href="https://scholar.google.com/citations?user=JbGXRUIAAAAJ">Mehdi Bennani</a>, 
+            <a href="https://twitter.com/ShaneLegg">Shane Legg</a>,
+            <a href="https://jveness.info/">Joel Veness</a>
+            <br>
+              <em>ACL ARR 2023</em> 
+            <br>
+            <a href="https://openreview.net/pdf?id=nMYj4argap">pdf</a> /
+            <a href="data/randpos.bib">bib</a>
+            <p>
+              We show that the transformer's poor length generalization is linked to the positional encodings being out-of-distribution. We introduce a novel positional encoding that samples a randomized ordered subset of sinusoidal positional encodings. We show the befit of this positional encoding on various algorithmic tasks.
+            </p>
+          </td>
+        </tr> 
+
         <!-- CTL++ -->
         <tr>
           <td style="padding:20px;width:25%;vertical-align:middle">
