--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
           </td>
           <td style="padding:20px;width:75%;vertical-align:middle">
-            <a href="https://openreview.net/forum?id=nMYj4argap">
+            <a href="https://arxiv.org/abs/2305.16843">
               <papertitle>Randomized Positional Encodings Boost Length Generalization of Transformers</papertitle>
             </a>
             <br>
@@ -120,9 +120,9 @@
             <a href="https://twitter.com/ShaneLegg">Shane Legg</a>,
             <a href="https://jveness.info/">Joel Veness</a>
             <br>
-              <em>ACL ARR 2023</em> 
+              <em>Annual Meeting of the Association for Computational Linguistics (ACL), 2023</em> 
             <br>
-            <a href="https://openreview.net/pdf?id=nMYj4argap">pdf</a> /
+            <a href="https://arxiv.org/pdf/2305.16843.pdf">pdf</a> /
             <a href="data/randpos.bib">bib</a>
             <p>
               We show that the transformer's poor length generalization is linked to the positional encodings being out-of-distribution. We introduce a novel positional encoding that samples a randomized ordered subset of sinusoidal positional encodings. We show the befit of this positional encoding on various algorithmic tasks.
