--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <name>Róbert Csordás</name>
             </p>
             <p>
-              I am a PhD candidate at the <a href="http://www.idsia.ch/">Swiss AI lab IDSIA</a>, working with
+              I am a postdoctoral researcher at the <a href="http://www.idsia.ch/">Swiss AI lab IDSIA</a>, working with
               Prof. <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>. I work on systematic 
               generalization, mainly in the context of algorithmic reasoning. This drives my research interest 
               in network architectures (Transformers, DNC, graph networks) with inductive biases like information 
