--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
               <a href="data/cv.pdf">CV</a> &nbsp/&nbsp
               <a href="https://github.com/RobertCsordas/">GitHub</a> &nbsp/&nbsp
               <a href="https://scholar.google.com/citations?user=av1lplwAAAAJ">Google Scholar</a> &nbsp/&nbsp
-              <a href="https://twitter.com/robert_csordas">Twitter</a>
+              <a href="https://twitter.com/robert_csordas">Twitter</a> &nbsp/&nbsp
+              <a href="data/thesis.pdf">Thesis</a> 
             </p>
           </td>
           <td style="padding:2.5%;width:40%;max-width:40%">
