--- a/index.html
+++ b/index.html
@@ -72,6 +72,34 @@
         
       <!-- List of publications -->
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <!-- Approximating Two-Layer Feedforward Networks for Efficient Transformers -->
+        <tr>
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <div class="one">
+                <img src="images/moe.png" width="160", style="padding-top: 7mm;">
+            </div>
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="data/moe.pdf">
+              <papertitle>Approximating Two-Layer Feedforward Networks for Efficient Transformers</papertitle>
+            </a>
+            <br>
+            <strong>Róbert Csordás</strong>,
+            <a href="http://people.idsia.ch/~kazuki/">Kazuki Irie</a>,
+            <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
+            <br>
+              <em>EMNLP Findings 2023</em> 
+            <br>
+            <a href="data/moe.pdf">pdf</a> /
+            <a href="https://github.com/robertcsordas/moe">code</a> /
+            <a href="data/moe.bib">bib</a>
+            <p>
+              We present different approximation methods for two-layer feedforward networks in a unified framework. Based on this, we develop a better-performing MoE, which matches or even outperforms the parameter-equivalent dense models.
+            </p>
+          </td>
+        </tr> 
+
+
         <!-- Topological Neural Discrete Representation Learning à la Kohonen -->
         <tr>
           <td style="padding:20px;width:25%;vertical-align:middle">
