Replace links with arxiv

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
           </td>
           <td style="padding:20px;width:75%;vertical-align:middle">
-            <a href="data/moe.pdf">
+            <a href="https://arxiv.org/abs/2310.10837">
               <papertitle>Approximating Two-Layer Feedforward Networks for Efficient Transformers</papertitle>
             </a>
             <br>
@@ -90,7 +90,7 @@
             <br>
               <em>EMNLP Findings 2023</em> 
             <br>
-            <a href="data/moe.pdf">pdf</a> /
+            <a href="https://arxiv.org/pdf/2310.10837.pdf">pdf</a> /
             <a href="https://github.com/robertcsordas/moe">code</a> /
             <a href="data/moe.bib">bib</a>
             <p>
