--- a/index.html
+++ b/index.html
@@ -72,6 +72,36 @@
         
       <!-- List of publications -->
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+        <!-- SwitchHead -->
+
+        <tr>
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <div class="one">
+                <img src="images/moeatt_simple.svg" width="160", style="padding-top: 7mm;">
+            </div>
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="https://arxiv.org/abs/2312.07987">
+              <papertitle>SwitchHead: Accelerating Transformers with Mixture-of-Experts Attention</papertitle>
+            </a>
+            <br>
+            <strong>Róbert Csordás</strong>,
+            <a href="https://piotrpiekos.github.io/">Piotr Piękos</a>,
+            <a href="http://people.idsia.ch/~kazuki/">Kazuki Irie</a>,
+            <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
+            <br>
+              <em>EMNLP Findings 2023</em> 
+            <br>
+            <a href="https://arxiv.org/pdf/2312.07987.pdf">pdf</a> /
+            <a href="https://github.com/robertcsordas/moe_attention">code</a> /
+            <a href="data/moe_attention.bib">bib</a>
+            <p>
+              We propose a novel MoE attention, which can match the performance of parameter-matched dense models with a fraction of the compute and memory requirements. We also present the "SwitchAll" model, where each layer is an MoE.
+            </p>
+          </td>
+        </tr> 
+
         <!-- Approximating Two-Layer Feedforward Networks for Efficient Transformers -->
         <tr>
           <td style="padding:20px;width:25%;vertical-align:middle">
