copy-paste error

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <a href="http://people.idsia.ch/~kazuki/">Kazuki Irie</a>,
             <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
             <br>
-              <em>EMNLP Findings 2023</em> 
+              <em>arXiv:2312.07987</em> 
             <br>
             <a href="https://arxiv.org/pdf/2312.07987.pdf">pdf</a> /
             <a href="https://github.com/robertcsordas/moe_attention">code</a> /
