--- a/index.html
+++ b/index.html
@@ -31,11 +31,14 @@
               <name>Róbert Csordás</name>
             </p>
             <p>
-              I am a postdoctoral researcher at the <a href="http://www.idsia.ch/">Swiss AI lab IDSIA</a>, working with
+              I am a postdoctoral researcher at the <a href="https://nlp.stanford.edu/">Stanford NLP group</a>, supervised by 
+              Prof. <a href="https://nlp.stanford.edu/~manning/">Christopher Manning</a> and 
+              Prof. <a href="https://web.stanford.edu/~cgpotts/">Christopher Potts</a>. 
+              Previously I did my PhD at the <a href="http://www.idsia.ch/">Swiss AI lab IDSIA</a>, working with
               Prof. <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>. I work on systematic 
               generalization, mainly in the context of algorithmic reasoning. This drives my research interest 
               in network architectures (Transformers, DNC, graph networks) with inductive biases like information 
-              routing (attention, memory) and learning modular structures. My goal is to create a system that
+              routing (attention, memory) and learning modular structures. I aim to create a system that
               can learn generally applicable rules instead of pure pattern matching but with minimal hardcoded
               structure. I consider the lack of systematic generation to be the main obstacle to a more generally
               applicable artificial intelligence.
