--- a/index.html
+++ b/index.html
@@ -76,6 +76,37 @@
       <!-- List of publications -->
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+        <!-- MoEUT -->
+
+        <tr>
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <div class="one">
+                <img src="images/moeut.svg" width="160", style="padding-top: 2mm;">
+            </div>
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="https://arxiv.org/abs/2405.16039">
+              <papertitle>MoEUT: Mixture-of-Experts Universal Transformers</papertitle>
+            </a>
+            <br>
+            <strong>Róbert Csordás</strong>,
+            <a href="http://people.idsia.ch/~kazuki/">Kazuki Irie</a>,
+            <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>,
+            <a href="https://web.stanford.edu/~cgpotts/">Christopher Potts</a>,
+            <a href="https://nlp.stanford.edu/~manning/">Christopher D. Manning</a>
+            <br>
+              <em>arXiv:2405.16039</em>
+            <br>
+            <a href="https://arxiv.org/pdf/2405.16039.pdf">pdf</a> /
+            <a href="https://github.com/robertcsordas/moeut">code</a> /
+            <a href="data/moeut.bib">bib</a>
+            <p>
+              We propose a novel Mixture-of-Experts Universal Transformer using σ-MoE, SwitchHead, layer grouping, and a novel peri-layernorm. Our method slightly outperforms standard Transformers on language modeling and zero-shot downstream tasks with less compute and memory requirements.
+            </p>
+          </td>
+        </tr> 
+
+
         <!-- SwitchHead -->
 
         <tr>
