--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
               Prof. <a href="https://nlp.stanford.edu/~manning/">Christopher Manning</a> and 
               Prof. <a href="https://web.stanford.edu/~cgpotts/">Christopher Potts</a>. 
               Previously I did my PhD at the <a href="http://www.idsia.ch/">Swiss AI lab IDSIA</a>, working with
-              Prof. <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>. I work on systematic 
-              generalization, mainly in the context of algorithmic reasoning. This drives my research interest 
-              in network architectures (Transformers, DNC, graph networks) with inductive biases like information 
-              routing (attention, memory) and learning modular structures. I aim to create a system that
-              can learn generally applicable rules instead of pure pattern matching but with minimal hardcoded
-              structure. I consider the lack of systematic generation to be the main obstacle to a more generally
+              Prof. <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>. 
+              I work on compositionality and systematic generalization, with the goal of improving the reasoning capabilities, 
+              trustworthiness, and data efficiency of neural models. My goal is to shift the preference of neural networks to
+              learn general, soft algorithms when possible, instead of relying on fuzzy memorization of seen patterns.
+              Instead of relying on symbolic systems, I want to bias the networks to learn rules implicitly, without explicit supervision,
+              with minimal hardcoded structure, and without reducing their expressivity. I am also interested in
+              mechanistic interpretability, which can provide a deep understanding of how the models work and the bottlenecks causing the networks to fail in composition and generalization.
+              I consider the lack of compositionality and systematic generation to be the main obstacle to a more generally
               applicable artificial intelligence.
           </p>
             <p>
@@ -574,6 +576,18 @@
         <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Talks</heading>
+                <ul>
+                  <li> In May 2024 I gave a <a href="https://docs.google.com/presentation/d/1_k9gklQ9FouZURy-HBI6HTG1HzRXiSXF-dsU4UVp17A/edit?usp=sharing">talk</a> in <a href="https://www.apple.com/">Apple</a> about my work</li>
+                </ul>
+                <ul>
+                  <li> In May 2024 I gave a <a href="https://docs.google.com/presentation/d/1mv8-X077NBqofKc8Hd7LW0_dE-cbK7qCZiQmiQhZ8As/edit?usp=sharing">talk</a> in <a href="https://www.adobe.com/">Adobe</a> on Mixture-of-Experts with focus on Universal Transformers</li>
+                </ul>
+                <ul>
+                  <li> In March 2024 I gave a <a href="https://docs.google.com/presentation/d/1YPU9JFo818fXmPhh1RX_a0F3VlF_ij1ScJr3-vsUo1g/edit?usp=sharing">talk</a> in <a href="https://www.nvidia.com/">Nvidia</a> about my work</li>
+                </ul>
+                <ul>
+                  <li> In March 2023 I gave a <a href="https://docs.google.com/presentation/d/1LU7qT2uNGsGRww50iZkiT-3Yb8NNjQ0_3rlND1kQM8U/edit?usp=sharing">talk</a> at <a href="https://nlp.epfl.ch/">NLP group</a> of <a href="https://www.epfl.ch/">EPFL</a> about my work.</li>
+                </ul>
                 <ul>
                   <li> In November 2022 I gave a <a href="https://docs.google.com/presentation/d/1LU7qT2uNGsGRww50iZkiT-3Yb8NNjQ0_3rlND1kQM8U/edit?usp=sharing">talk</a> at <a href="https://rycolab.io/">Rycolab</a> at <a href="https://ethz.ch">ETH Zürich</a> on the Neural Sequence Models Theory group on how ideas from compositionality improve systematic generalization.</li>
                 </ul>
