--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <strong>Róbert Csordás*</strong>,
             <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
             <br>
-              <em>arXiv:2302.07950</em> 
+              <em>International Conference on Artificial Neural Networks (ICANN), 2024</em>
             <br>
             <a href="https://arxiv.org/pdf/2302.07950.pdf">pdf</a> /
             <a href="https://github.com/IDSIA/kohonen-vae">code</a> /
