--- a/index.html
+++ b/index.html
@@ -78,6 +78,35 @@
       <!-- List of publications -->
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+        <!-- Onion -->
+
+        <tr>
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <div class="one">
+                <img src="images/onion.svg" width="160", style="padding-top: 2mm;">
+            </div>
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="https://arxiv.org/abs/2408.10920">
+              <papertitle>Recurrent Neural Networks Learn to Store and Generate Sequences using Non-Linear Representations</papertitle>
+            </a>
+            <br>
+            <strong>Róbert Csordás</strong>,
+            <a href="https://web.stanford.edu/~cgpotts/">Christopher Potts</a>,
+            <a href="https://nlp.stanford.edu/~manning/">Christopher D. Manning</a>,
+            <a href="https://atticusg.github.io/">Atticus Geiger</a>
+            <br>
+              <em>arXiv:2408.10920</em>
+            <br>
+            <a href="https://arxiv.org/pdf/2408.10920.pdf">pdf</a> /
+            <a href="https://github.com/robertcsordas/onion_representations">code</a> /
+            <a href="data/onion.bib">bib</a>
+            <p>
+              We show that RNNs, under certain conditions, prefer to store sequences in a magnitude-based encoding that violates the Linear Representation Hypothesis (LRH). This counterexample strongly indicates that interpretability research should not be confined by the LRH.
+            </p>
+          </td>
+        </tr> 
+
         <!-- MoEUT -->
 
         <tr>
