Add moeut details

--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
             <br>
             <a href="https://arxiv.org/pdf/2405.16039.pdf">pdf</a> /
             <a href="https://github.com/robertcsordas/moeut">code</a> /
+            <a href="https://github.com/robertcsordas/moeut_training_code">training code</a> /
+            <a href="https://huggingface.co/robertcsordas/moeut_training_checkpoints">checkpoints</a> /
             <a href="data/moeut.bib">bib</a>
             <p>
               We propose a novel Mixture-of-Experts Universal Transformer using σ-MoE, SwitchHead, layer grouping, and a novel peri-layernorm. Our method slightly outperforms standard Transformers on language modeling and zero-shot downstream tasks with less compute and memory requirements.
