--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <a href="https://nlp.stanford.edu/~manning/">Christopher D. Manning</a>,
             <a href="https://atticusg.github.io/">Atticus Geiger</a>
             <br>
-              <em>arXiv:2408.10920</em>
+              <em>BlackboxNLP 2024</em>
             <br>
             <a href="https://arxiv.org/pdf/2408.10920.pdf">pdf</a> /
             <a href="https://github.com/robertcsordas/onion_representations">code</a> /
@@ -126,7 +126,7 @@
             <a href="https://web.stanford.edu/~cgpotts/">Christopher Potts</a>,
             <a href="https://nlp.stanford.edu/~manning/">Christopher D. Manning</a>
             <br>
-              <em>arXiv:2405.16039</em>
+              <em>NeurIPS 2024</em>
             <br>
             <a href="https://arxiv.org/pdf/2405.16039.pdf">pdf</a> /
             <a href="https://github.com/robertcsordas/moeut">code</a> /
@@ -158,10 +158,11 @@
             <a href="http://people.idsia.ch/~kazuki/">Kazuki Irie</a>,
             <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
             <br>
-              <em>arXiv:2312.07987</em> 
+              <em>NeurIPS 2024</em> 
             <br>
             <a href="https://arxiv.org/pdf/2312.07987.pdf">pdf</a> /
-            <a href="https://github.com/robertcsordas/moe_attention">code</a> /
+            <a href="https://github.com/robertcsordas/switchhead">code</a> /
+            <a href="https://github.com/robertcsordas/moe_attention">training code</a> /
             <a href="data/moe_attention.bib">bib</a>
             <p>
               We propose a novel MoE attention, which can match the performance of parameter-matched dense models with a fraction of the compute and memory requirements. We also present the "SwitchAll" model, where each layer is an MoE.
