--- a/index.html
+++ b/index.html
@@ -78,6 +78,36 @@
       <!-- List of publications -->
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+        <!-- MrT5 -->
+
+        <tr>
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <div class="one">
+                <img src="images/mrt5.svg" width="160", style="padding-top: 10mm;">
+            </div>
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="https://arxiv.org/abs/2410.20771">
+              <papertitle>MrT5: Dynamic Token Merging for Efficient Byte-level Language Models</papertitle>
+            </a>
+            <br>
+            <a href="https://juliekallini.com/">Julie Kallini</a>,
+            <a href="https://murtyshikhar.github.io/">Shikhar Murty</a>,
+            <a href="https://nlp.stanford.edu/~manning/">Christopher D. Manning</a>,
+            <a href="https://web.stanford.edu/~cgpotts/">Christopher Potts</a>,
+            <strong>Róbert Csordás</strong>
+            <br>
+              <em>Preprint</em>
+            <br>
+            <a href="https://arxiv.org/pdf/2410.20771.pdf">pdf</a> /
+            <a href="https://github.com/jkallini/mrt5">code</a> /
+            <a href="data/mrt5.bib">bib</a>
+            <p>
+              We propose a dynamic token deletion mechanism that forces merging information from early layers of the encoder of ByT5, speeding it up significantly.
+            </p>
+          </td>
+        </tr> 
+
         <!-- Onion -->
 
         <tr>
@@ -145,7 +175,7 @@
         <tr>
           <td style="padding:20px;width:25%;vertical-align:middle">
             <div class="one">
-                <img src="images/moeatt_simple.svg" width="160", style="padding-top: 7mm;">
+                <img src="images/moeatt_simple.svg" width="160", style="padding-top: 12mm;">
             </div>
           </td>
           <td style="padding:20px;width:75%;vertical-align:middle">
@@ -174,7 +204,7 @@
         <tr>
           <td style="padding:20px;width:25%;vertical-align:middle">
             <div class="one">
-                <img src="images/moe.png" width="160", style="padding-top: 7mm;">
+                <img src="images/moe.png" width="160", style="padding-top: 3mm;">
             </div>
           </td>
           <td style="padding:20px;width:75%;vertical-align:middle">
